# HackLND_

./: README.md  create_sessions.py  linkedin_scrappers.py  requirements.txt  scrapping.js  scrapping.py
Mehedi/: fix_api_key.sh  test_model.py
Mehedi/backend/: main.py
Mehedi/mehedi-front-end/: index.html  package-lock.json  package.json  tailwind.config.js
Mehedi/mehedi-front-end/src/: api.js  (+2 more)
Mohammed/: actioncenter.html  code.html  events.html  funding.html  modulenotes.html  opportunities.html  profile.html  schedule.html
Mohammed/assets/: beacon-client.js
Rahul/: database.py  main.py  seed.py
Tom/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.js
Tom/backend/: server.mjs
Tom/src/: App.jsx  styles.css
myapp/: README.md  pyproject.toml
myapp/app/: main.py
myapp/app/core/: config.py  dependencies.py
myapp/app/models/domain/: job.py  task.py
myapp/app/models/persistence/: assistant_repo.py  calendar_event_repo.py  document_repo.py  job_repo.py  task_repo.py
myapp/app/models/schemas/: assistant.py  documents.py  jobs.py  scheduler.py  socratic.py  task.py
myapp/app/services/: assistant_service.py  document_service.py  job_discovery_service.py  scheduler.py
myapp/app/services/socratic/: agent.py
myapp/app/services/socratic/prompts/: socratic.json
myapp/app/utils/: time.py
myapp/app/view/v1/: router.py
myapp/app/view/v1/endpoints/: assistant_view.py  documents_view.py  jobs_view.py  scheduler_view.py  socratic_view.py
myapp/tests/: test_integration_endpoints.py  test_socratic.py  test_task_repo.py
(+17 files in other folders)
